--- a/src/components/adapt-flex/less/flex.less
+++ b/src/components/adapt-flex/less/flex.less
@@ -71,7 +71,7 @@
     width: 100%;
     transition: all 0.35s 0.1s ease-out;
     color: #fff;
-    padding: 1rem;    
+    padding: 5%;    
   }
   &__title { 
     .item-title;  
