--- a/src/theme/adapt-contrib-vanilla/less/project/theme-extras.less
+++ b/src/theme/adapt-contrib-vanilla/less/project/theme-extras.less
@@ -1285,6 +1285,12 @@ padding: 0
     width: 400px;
     margin: 0;
   }
+  .headline{
+    border: none;
+    animation: none;
+    white-space: wrap;
+  }
+  .hero {padding-left: 0;}
 }
 
 .b-10 .block__inner { 
