--- a/src/theme/adapt-contrib-vanilla/less/project/theme-extras.less
+++ b/src/theme/adapt-contrib-vanilla/less/project/theme-extras.less
@@ -734,7 +734,7 @@ html:not(.a11y-disable-focusoutline) .mcq-item__input:focus + .mcq-item__label{
 .narrative__content{
   bottom: 0;
   display: flex;
-  left: 625px;
+  left: 448px;
   position: absolute;
   z-index: 3;
   margin-left: -27px;
@@ -1291,6 +1291,9 @@ padding: 0
     white-space: wrap;
   }
   .hero {padding-left: 0;}
+  .tabs__content-item-inner {
+    max-width: 25ch;
+  }
 }
 
 .b-10 .block__inner { 
