update first page

--- a/src/theme/adapt-contrib-vanilla/less/project/theme-extras.less
+++ b/src/theme/adapt-contrib-vanilla/less/project/theme-extras.less
@@ -1248,7 +1248,10 @@ padding: 0
 }
 
 @media (max-width: 1100px){
-  
+  .background{
+    background-color: #edf5fb;
+    background-image: none!important;
+  }
   .tabs__content-item-inner{
     font-size: 0.55em;
   }
