--- a/src/theme/adapt-contrib-vanilla/less/project/theme-extras.less
+++ b/src/theme/adapt-contrib-vanilla/less/project/theme-extras.less
@@ -1210,6 +1210,10 @@ padding: 0
     left: 20%;
 }
 
+.c-80, .c-85{
+  background-color: rgba(255, 255, 255, 80%);
+}
+
 @media (min-width: 805px){
   .tabs{
     transform: translate3d(-800px, 0px, 0px);
