--- a/src/theme/adapt-contrib-vanilla/less/project/theme-extras.less
+++ b/src/theme/adapt-contrib-vanilla/less/project/theme-extras.less
@@ -1213,7 +1213,10 @@ padding: 0
 .c-80, .c-85{
   background-color: rgba(255, 255, 255, 80%);
 }
-
+.a-10{
+  background-image: url("course/en/images/dots.gif");
+  background-repeat: no-repeat;
+}
 @media (min-width: 805px){
   .tabs{
     transform: translate3d(-800px, 0px, 0px);
