--- a/src/theme/adapt-contrib-vanilla/less/project/theme-extras.less
+++ b/src/theme/adapt-contrib-vanilla/less/project/theme-extras.less
@@ -1214,8 +1214,10 @@ padding: 0
   background-color: rgba(255, 255, 255, 80%);
 }
 .a-10{
-  background-image: url("course/en/images/dots.gif");
+  background-image: url("course/en/images/dots1.gif");
   background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
 }
 @media (min-width: 805px){
   .tabs{
