update lottie and background

--- a/src/theme/adapt-contrib-vanilla/less/project/theme-extras.less
+++ b/src/theme/adapt-contrib-vanilla/less/project/theme-extras.less
@@ -1200,8 +1200,17 @@ padding: 0
 }
 .align_center {
   align-self: center;
+}.a-10 .block__inner{
+  padding: 25rem 0;
 }
-.big_lottie .lottieinteractivity__widget{
+
+.b-75, .b-85{
+  background-image: url("course/en/images/dots2.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+}
+.big_lottie lottie-player{
   width: 100vw;
     position: relative;
     margin-left: -20vw;
@@ -1213,12 +1222,7 @@ padding: 0
 .c-80, .c-85{
   background-color: rgba(255, 255, 255, 80%);
 }
-.a-10{
-  background-image: url("course/en/images/dots2.gif");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-attachment: fixed;
-}
+
 @media (min-width: 805px){
   .tabs{
     transform: translate3d(-800px, 0px, 0px);
